@startuml
header phone
Client ..> ConcreteBuilder1
Director --> Client
class Director{
    builder: Builder
    Director(builder)
    changeBuilder(builder)
    make(type)
}
ConcreteBuilder1 --> Product1
Class ConcreteBuilder1 {
    result: Product1
    reset()
    buildStepA()
    buildStepB()
    buildStepZ()
    getResult(): Product1
}
ConcreteBuilder2 --> Product2
Class ConcreteBuilder2 {
    result: Product1
    reset()
    buildStepA()
    buildStepB()
    buildStepZ()
    getResult(): Product2
}
ConcreteBuilder1 ..|> Builder
ConcreteBuilder2 ..|> Builder
Director --> Builder
interface Builder {
    reset()
    buildStepA()
    buildStepB()
    buildStepZ()
}
@enduml